# qjacktrip

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
macos/: assemble_app.sh  entitlements.plist
macos/QJackTrip.app_template/Contents/: Info.plist
macos/package/: postinstall.sh
search/: search_index.json
src/: UdpDataProtocol.cpp  UserInterface.cpp  UserInterface.h  main.cpp  qtdefs.h
src/gui/: about.cpp  about.ui  authDialog.cpp  authDialog.h  authDialog.ui  qjacktrip.cpp  qjacktrip.h  qjacktrip.qrc  qjacktrip.ui  timeDialog.ui  userDialog.ui
win/: build_installer.bat  files.wxs  qjacktrip.rc  qjacktrip.wxs
